# PytorchCPP

./: LICENSE  README.md
lesson1/: CMakeLists.txt  README.md  main.cpp
lesson2/: CMakeLists.txt  README.md
lesson2/include/: network.h
lesson2/src/: main.cpp
lesson3/: CMakeLists.txt  README.md  main.cpp  models.py
lesson3/models/: net.pt
lesson4/: CMakeLists.txt  README.md  main.cpp
